--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.brownian.plugins.intellij.complexity-reducer'
-version '0.1.0'
+version '0.1.1'
 
 repositories {
     mavenCentral()
@@ -22,6 +22,7 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version '201-EAP-SNAPSHOT'
+//    version '2019.3'
     plugins 'java'
 }
 compileKotlin {
@@ -32,6 +33,8 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
+     0.1.1 No change, incremented to upload a 2019.3 revision.
+
      0.1.0 Added gutter icons showing complexity
      """
 }
