--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.71'
 }
 
+apply plugin: "org.jetbrains.kotlin.jvm"
+
 group 'com.brownian.plugins.intellij.complexity-reducer'
-version '0.1.1'
+version '0.1.2'
 
 repositories {
     mavenCentral()
@@ -21,8 +23,8 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '201-EAP-SNAPSHOT'
-//    version '2019.3'
+//    version '201-EAP-SNAPSHOT'
+    version '2019.3'
     plugins 'java'
 }
 compileKotlin {
@@ -33,6 +35,8 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
+     0.1.2 Added (possibly faulty) handwritten N-Path complexity metrics. 
+
      0.1.1 No change, incremented to upload a 2019.3 revision.
 
      0.1.0 Added gutter icons showing complexity
