Fixed NPath calculation for a lot of element types, including for statements and a bunch of expression types

--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-//    version '201-EAP-SNAPSHOT'
-    version '2019.3'
+    version '201-EAP-SNAPSHOT'
+//    version '2019.3'
     plugins 'java'
 }
 compileKotlin {
