--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply plugin: "org.jetbrains.kotlin.jvm"
 
 group 'com.brownian.plugins.intellij.complexity-reducer'
-version '0.1.2'
+version '0.1.3'
 
 repositories {
     mavenCentral()
@@ -23,8 +23,7 @@ dependencies {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '201-EAP-SNAPSHOT'
-//    version '2019.3'
+    version '2020.1'
     plugins 'java'
 }
 compileKotlin {
@@ -35,10 +34,6 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
-     0.1.2 Added (possibly faulty) handwritten N-Path complexity metrics. 
-
-     0.1.1 No change, incremented to upload a 2019.3 revision.
-
-     0.1.0 Added gutter icons showing complexity
+     0.1.3 Added Icon, and 2020.1 release
      """
 }
