--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply plugin: "org.jetbrains.kotlin.jvm"
 
 group 'com.brownian.plugins.intellij.complexity-reducer'
-version '0.1.3'
+version '0.1.4a'
 
 repositories {
     mavenCentral()
@@ -34,6 +34,6 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
-     0.1.3 Added Icon, and 2020.1 release
+     0.1.4a Added complexity for lambdas, to avoid situations where complexity is hidden in a method behind a super complex lambda
      """
 }
