--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,17 +1,17 @@
 <idea-plugin>
     <id>com.brownian.plugins.intellij.complexity</id>
-    <name>Complexity reducer</name>
+    <name>Complexity Tools</name>
     <vendor email="jack.brown.255+brownian-motion@gmail.com">JJ Brown</vendor>
 
     <description>
-        Provides tools for reducing complexity of Java methods,
-        and hints to help notice that creep before it gets bad.
+        Provides hints to help notice the creep of complexity in Java methods before it gets bad.
     </description>
 
     <!-- please see https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-         on how to target different products -->
+         on how to target different products -->b
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.java</depends>
+    <depends>com.intellij.modules.lang</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
