Updated major dependencies and build system to latest versions

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,13 @@
-rootProject.name = 'complexity-reducer'
+pluginManagement {
+    repositories {
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
+        gradlePluginPortal()
+        maven {
+            url 'https://www.jetbrains.com/intellij-repository/snapshots'
+        }
+    }
+}
 
+rootProject.name = 'complexity-reducer'
