--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,39 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.18'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'org.jetbrains.intellij' version '1.3.1'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
 }
 
 apply plugin: "org.jetbrains.kotlin.jvm"
 
 group 'com.brownian.plugins.intellij.complexity-reducer'
-version '0.1.3'
+version '0.1.5'
+sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
-    maven {
-        url 'https://www.jetbrains.com/intellij-repository/snapshots'
-    }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2020.1'
-    plugins 'java'
+    version = '213.6777.52'
+    plugins = ['java']
 }
+
+patchPluginXml {
+    version = project.version
+    sinceBuild = '213.6777.52'
+    untilBuild = '213.*'
+}
+
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-patchPluginXml {
-    changeNotes """
-     0.1.3 Added Icon, and 2020.1 release
-     """
+    kotlinOptions.jvmTarget = "11"
 }
